--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
   "author": "Moshe Kolodny",
   "license": "MIT",
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.18.2",
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-node-resolve": "^13.3.0",
     "benchmark": "^2.1.2",
     "circular-json": "^0.3.0",
     "immutable": "^3.7.6",
     "json-stringify-safe": "^5.0.1",
     "mobx": "^2.4.1",
     "mocha": "^2.2.1",
-    "rimraf": "^2.5.2"
+    "rimraf": "^2.5.2",
+    "rollup": "^2.75.6"
   },
-  "dependencies": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/kolodny/jsan.git"
